--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 
         <footer>
             <h3>about</h3>
-            <p>Just a bunch of talented designers who inspire me. This list will grow over time. If you want to take your name out of here, or simply want me to change your picture, just get in touch <a href="http://twitter.com/mx3m">on Twitter</a>. Thanks to <a href="http://julienrousseau.com">Julien</a> for writing the JS; you're a super-hero. Design and rest of the development by <a href="http://www.matmm.me">myself</a>. Merci.</p>
+            <p>Just a bunch of talented designers who inspire me. This list will grow over time. If you want to take your name out of here, or simply want me to change your picture, just get in touch <a href="http://twitter.com/mx3m">on Twitter</a> or <a href="http://dribbble.com/m3xm">on Dribbble</a>. Thanks to <a href="http://julienrousseau.com">Julien</a> for writing the JS; you're a super-hero. Design and rest of the development by <a href="http://m3xm.github.io">myself</a>. Merci.</p>
+
+            <p style="margin-top: 30px;"><strong>Update Nov. 23rd 2013</strong>: Added 12 new designers I like. Lots of girls; I'm not complaining. Also (self-promo mode engaged), I'm moving my personal website to <a href="http://m3xm.github.io">Github</a>, have a look.</p>
+
+            <p style="margin-top: 30px;"><strong>Update Oct. 11th 2013</strong>: Thank you so much for all your comments/feedback/love since I first launched Pincil.co late september 2013. I've been getting a few requests on Twitter to show how the flipping cards effect was done using CSS3. So I naturally created <a href="https://github.com/m3xm/Pincil-Flipping-Cards">a repo</a> on Github for that. Will also add 20(ish) new designers very soon. Will update you on my <a href="http://twitter.com/mx3m">twitter</a> so stay tuned.</p>
         </footer>
         <div id="share">
             <a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal">Tweet</a>
